# otus_homework_01

./: README.md
bck/: main.py  pyproject.toml
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  plane.py
homework_03/: Dockerfile  view.py
homework_04/: jsonplaceholder_requests.py  main.py  models.py  requirements.txt
homework_05/: app.py  requirements.txt
homework_05/templates/: base.html  history.html  index.html
homework_05/views/books/: views.py
homework_06/: docker-compose.yml  pyproject.toml
homework_06/docker-build/: Dockerfile  entrypoint.sh
homework_06/shop/: config.py  main.py
homework_06/shop/migrations/versions/: 2024_02_14_1257-fe90b19f9361_creat_table.py
homework_06/shop/models/: __init__.py  book.py  database.py
homework_06/shop/static/css/: hover-hightlight.css  main.css
homework_06/shop/templates/: base.html  books_list.html  confirm-delete.html  create.html  details.html
homework_06/shop/views/: crud.py  views.py
homework_07/settings/: urls.py
homework_07/templates/: base.html  index.html
homework_08/settings/: settings.py
homework_08/templates/: index.html
homework_09/templates/common/: footer-common.html
