[tool.poetry]
name = "hw-06"
version = "0.1.0"
description = ""
authors = ["sverlobaka <sverlobaka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
psycopg = "^3.1.18"
psycopg-binary = "^3.1.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
